Changing font to Ubuntu Mono.

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
     border-radius: 3%;
     column-gap: 0px;
     row-gap: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Ubuntu Mono;
 }
 
 #return {
